--- a/src/screens/signUp/SignUp.css
+++ b/src/screens/signUp/SignUp.css
@@ -1,5 +1,5 @@
 .signUpRight {
-    height: 100vh;
+    min-height: 100vh;
     width: 60%;
     background-color: white;
     position: absolute;
@@ -11,6 +11,7 @@
     align-items: center;
     flex-direction: column;
     gap: 5px;
+    overflow-y: auto;
 
 }
 
@@ -32,6 +33,7 @@
     flex-direction: column;
     padding: 6%;
     gap: 15px;
+    position: fixed;
 }
 
 .accountSignIn {
