--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,6 +14,7 @@
     height: 60px;
     border-bottom: 3px solid var(--secondary-bg);
     border-bottom: 3px solid var(--accent-bg);
+    z-index: 1111;
 }
 
 .logo-nb {
