--- a/src/components/btn/Btn.css
+++ b/src/components/btn/Btn.css
@@ -6,6 +6,7 @@
     max-width: 90%;
     width: 428px;
     height: 50px;
+    min-height: 50px;
     border-radius: 32px;
     margin: 8px 0px;
     background-color: var(--accent-bg);
